--- a/docker/webscraper/Dockerfile
+++ b/docker/webscraper/Dockerfile
@@ -1,5 +1,7 @@
-FROM demisto/pyjwt3:1.0.0.19327
+FROM demisto/python3:3.9.7.24076
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
-  && pip install --no-cache-dir beautifulsoup4 xmltodict\
+COPY requirements.txt .
+
+RUN apk --update add --no-cache --virtual .build-dependencies  python3-dev libxml2-dev libxslt-dev build-base wget git \
+  && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
