--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2350,13 +2350,13 @@ update_configs:
         update_type: all
 
   - package_manager: python
-    directory: /docker/webscraper
+    directory: /docker/bs4-py3
     update_schedule: live
     automerged_updates:
     - match:
         update_type: semver:minor
   - package_manager: docker
-    directory: /docker/webscraper
+    directory: /docker/bs4-py3
     update_schedule: daily
     automerged_updates:
     - match:
