Make it work on alpine

--- a/docker/readpdf/Dockerfile
+++ b/docker/readpdf/Dockerfile
@@ -1,6 +1,10 @@
-FROM demisto/python3-deb:3.9.7.24076
-RUN apt-get update -y && apt-get -y install build-essential checkinstall cmake wget pkg-config libfontconfig1-dev libjpeg-dev libcairo2-dev libboost-all-dev libopenjp2-7-dev
-RUN wget --no-check-certificate poppler.freedesktop.org/poppler-21.10.0.tar.xz -O /tmp/p.tar.xz && \
+FROM demisto/python3:3.9.7.24076
+
+RUN apk update && apk add --no-cache alpine-sdk cmake wget xz freetype-dev \
+  fontconfig ttf-dejavu libjpeg fontconfig-dev libjpeg-turbo-dev cairo cairo-dev \
+  boost-dev openjpeg-tools openjpeg-dev
+
+RUN wget https://poppler.freedesktop.org/poppler-21.10.0.tar.xz -O /tmp/p.tar.xz && \
   tar -xvf /tmp/p.tar.xz -C /tmp && \
   cd /tmp/poppler-21.10.0 && \
   mkdir build && cd build && \
@@ -10,5 +14,4 @@ RUN wget --no-check-certificate poppler.freedesktop.org/poppler-21.10.0.tar.xz -
         -DENABLE_UNSTABLE_API_ABI_HEADERS=ON \
         .. && \
   make && \
-  checkinstall make install && make clean
-
+  make install && make clean
