added confluent-kafka dockerfile

--- a/docker/confluent-kafka/Dockerfile
+++ b/docker/confluent-kafka/Dockerfile
@@ -3,7 +3,7 @@ FROM demisto/python3:3.9.7.24076
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache snappy snappy-dev
+RUN apk --update add --no-cache snappy snappy-dev librdkafka-dev
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
