Removed wheel and replaced with public Git repository.

--- a/docker/accessdata/Dockerfile
+++ b/docker/accessdata/Dockerfile
@@ -1,4 +1,3 @@
 FROM demisto/python3:3.9.6.24019
-COPY ./dist/AccessData_SDK-0.6.2-py3-none-any.whl /AccessData_SDK-0.6.2-py3-none-any.whl
-WORKDIR /
-RUN pip install /AccessData_SDK-0.6.2-py3-none-any.whl
+
+RUN pip install git+https://github.com/AccessDataOps/FTK-API-SDK.git
