--- a/docker/accessdata/Dockerfile
+++ b/docker/accessdata/Dockerfile
@@ -1,3 +1,3 @@
 FROM demisto/python3:3.9.6.24019
 
-RUN pip install git+https://github.com/AccessDataOps/FTK-API-SDK.git
+RUN pip install https://github.com/AccessDataOps/FTK-API-SDK/archive/refs/tags/v0.6.2.zip
