--- a/docker/dockerbuild/Dockerfile
+++ b/docker/dockerbuild/Dockerfile
@@ -5,8 +5,15 @@ RUN curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-instal
   && echo 'export PATH="/home/circleci/.pyenv/bin:$PATH"' >> ~/.bashrc \
   && echo 'eval "$(pyenv init -)"' >> ~/.bashrc \
   && echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc \
-  && echo 'export LD_LIBRARY_PATH=/usr/local/lib' >> ~/.bashrc
+  && echo 'export LD_LIBRARY_PATH=/usr/local/lib' >> ~/.bashrc \
+  && echo 'export CPPFLAGS=-I/usr/lib/ssl/include' >> ~/.bashrc \
+  && echo 'export LDFLAGS=-L/usr/lib/ssl/lib' >> ~/.bashrc
 
+RUN cat ~/.bashrc
+RUN env
+RUN bash -i -c 'env'
+
+RUN bash -i -c 'pyenv update'
 RUN bash -i -c 'pyenv install 3.7.6 && pyenv versions | grep 3.7.6'
 RUN bash -i -c 'pyenv install 3.8.1 && pyenv versions | grep 3.8.1'
 RUN bash -i -c 'pyenv install 3.6.10 && pyenv versions | grep 3.6.10'
