--- a/docker/dockerbuild/Dockerfile
+++ b/docker/dockerbuild/Dockerfile
@@ -6,7 +6,7 @@ RUN curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-instal
   && echo 'eval "$(pyenv init -)"' >> ~/.bashrc \
   && echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
 
-RUN wget http://www.openssl.org/source/openssl-1.1.1l.tar.gz \
+RUN wget --no-check-certificate http://www.openssl.org/source/openssl-1.1.1l.tar.gz \
   && tar -xvzf openssl-1.1.1l.tar.gz \
   && cd openssl-1.1.1l \
   && ./config --prefix=/usr/local/openssl --openssldir=/usr/local/openssl \
