--- a/docker/dockerbuild/Dockerfile
+++ b/docker/dockerbuild/Dockerfile
@@ -1,4 +1,4 @@
-FROM circleci/python:2.7.17-stretch
+FROM circleci/python:3.10.0
 
 # Setup pyenv and install extra python versions
 RUN curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash \
@@ -6,13 +6,13 @@ RUN curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-instal
   && echo 'eval "$(pyenv init -)"' >> ~/.bashrc \
   && echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
 
-RUN sudo wget --no-check-certificate http://www.openssl.org/source/openssl-1.1.1l.tar.gz \
-  && sudo tar -xvzf openssl-1.1.1l.tar.gz \
-  && cd openssl-1.1.1l \
-  && sudo ./config --prefix=/usr/local/openssl --openssldir=/usr/local/openssl \
-  && sudo make \
-  && sudo make install \
-  && /usr/local/openssl/bin/openssl version
+# RUN sudo wget --no-check-certificate http://www.openssl.org/source/openssl-1.1.1l.tar.gz \
+#   && sudo tar -xvzf openssl-1.1.1l.tar.gz \
+#   && cd openssl-1.1.1l \
+#   && sudo ./config --prefix=/usr/local/openssl --openssldir=/usr/local/openssl \
+#   && sudo make \
+#   && sudo make install \
+#   && /usr/local/openssl/bin/openssl version
 
 RUN bash -i -c 'pyenv install 3.7.6 && pyenv versions | grep 3.7.6'
 RUN bash -i -c 'pyenv install 3.8.1 && pyenv versions | grep 3.8.1'
