--- a/docker/pymisp2/Pipfile
+++ b/docker/pymisp2/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+cryptography = "==v3.4.8"
 pymisp = {version = "*", extras = ["email"]}
 
 [dev-packages]
