--- a/docker/pymisp2/Pipfile
+++ b/docker/pymisp2/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+cffi = "*"
 cryptography = "==2.8"
 pydeep = "*"
 pymisp = {version = "*", extras = ["email"]}
