--- a/docker/dnstwist/Dockerfile
+++ b/docker/dnstwist/Dockerfile
@@ -7,5 +7,5 @@ RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies \
   && wget --no-check-certificate https://github.com/elceef/dnstwist/archive/refs/heads/master.zip \
-  && unzip master.zip
-
+  && unzip master.zip \
+  && mv dnstwist-master dnstwist
