--- a/docker/pytan/Dockerfile
+++ b/docker/pytan/Dockerfile
@@ -4,7 +4,7 @@ COPY requirements.txt .
 
 RUN apk --update add --no-cache --virtual .build-dependencies python2-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies \
+  && apk del .build-dependencies
 
 COPY 2.2.2.zip .
 RUN unzip 2.2.2.zip
