--- a/docker/unzip/Dockerfile
+++ b/docker/unzip/Dockerfile
@@ -1,5 +1,4 @@
-
-FROM demisto/python3:3.9.6.22912
+FROM demisto/python3:3.9.7.24076
 
 COPY requirements.txt .
 
@@ -7,7 +6,4 @@ RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
 
-RUN apk --update add --no-cache p7zip
-
-# installs unrar
-RUN apk --update add --no-cache unrar
+RUN apk --update add --no-cache p7zip unrar
