Added azure-kusto-data docker image

--- a/docker/azure-kusto-data/Pipfile
+++ b/docker/azure-kusto-data/Pipfile
@@ -4,14 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"ruamel.yaml" = "*"
-requests = "*"
-dockerfile_parse = "*"
-pyyaml = "*"
-regex = "*"
+azure-kusto-data = "*"
 
 [dev-packages]
-pytest = "*"
 
 [requires]
 python_version = "3.9"
