--- a/docker/syslog/Dockerfile
+++ b/docker/syslog/Dockerfile
@@ -4,5 +4,6 @@ FROM demisto/python3:3.9.7.24076
 COPY requirements.txt .
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+  libffi-dev openssl-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
