--- a/docker/elasticsearch/Pipfile
+++ b/docker/elasticsearch/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-elasticsearch = "*"
+elasticsearch = "7.13.4"
 elasticsearch-dsl = "*"
 
 [requires]
