--- a/docker/elasticsearch/Pipfile
+++ b/docker/elasticsearch/Pipfile
@@ -6,7 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-elasticsearch = "==7.13.0"
+elasticsearch = "*"
+opensearch-py = "*"
 elasticsearch-dsl = "*"
 
 [requires]
