--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -6,6 +6,13 @@ version: 1
 update_configs:
 
   - package_manager: python
+    directory: /docker/expel
+    update_schedule: live
+    automerged_updates:
+    - match:
+        update_type: semver:minor
+
+  - package_manager: python
     directory: /docker/pcap-http-extractor
     update_schedule: live
     automerged_updates:
