--- a/docker/elasticsearch/Pipfile
+++ b/docker/elasticsearch/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 elasticsearch = "*"
 opensearch-py = "*"
 elasticsearch-dsl = "*"
+opensearch_dsl = "*"
 
 [requires]
 python_version = "3.7"
