--- a/docker/elasticsearch/Pipfile
+++ b/docker/elasticsearch/Pipfile
@@ -7,7 +7,9 @@ verify_ssl = true
 
 [packages]
 elasticsearch = "*"
+opensearch-py = "*"
 elasticsearch-dsl = "*"
+opensearch_dsl = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
