--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -26,7 +26,7 @@ jobs:
             echo "::set-output name=approved::true";
             exit 0
           fi
-          minor_regex='^(build\(deps\): )?[B|b]ump .+ from ([[:digit:]]+)\.([[:digit:]]+)\.([[:digit:]]+) to ([[:digit:]]+)\.([[:digit:]]+)\.([[:digit:]]+)'
+          minor_regex='bump .+ from (\d{1,2})\.(\d{1,2})\.(\d{1,2}) to (\d{1,2})\.(\d{1,2})\.(\d{1,2})'
           if [[ "$PULL_TITLE" =~  $minor_regex ]]; then
               if [[ "${BASH_REMATCH[2]}" == "${BASH_REMATCH[5]}" ]]; then
                   echo "patch/minor version upgrade. approving"
