--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -28,7 +28,7 @@ jobs:
           fi
           minor_regex='bump .+ from (\d{1,2})\.(\d{1,2})\.(\d{1,2}) to (\d{1,2})\.(\d{1,2})\.(\d{1,2})'
           if [[ "$PULL_TITLE" =~  $minor_regex ]]; then
-              if [[ "${BASH_REMATCH[2]}" == "${BASH_REMATCH[5]}" ]]; then
+              if [[ "${BASH_REMATCH[1]}" == "${BASH_REMATCH[4]}" && "${BASH_REMATCH[2]}" == "${BASH_REMATCH[5]}" ]]; then
                   echo "patch/minor version upgrade. approving"
                   echo "::set-output name=approved::true";
                   exit 0
