--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,9 @@ updates:
     schedule:
      interval: daily
     open-pull-requests-limit: 200
+    labels:
+      - "docker"
+      - "dependencies"
   - package-ecosystem: pip
     directory: /docker/pcap-http-extractor
     schedule:
