--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -26,9 +26,9 @@ jobs:
             echo "::set-output name=approved::true";
             exit 0
           fi
-          minor_regex='build\(deps(-dev)*\): bump .+ from (\d{1,2})\.(\d{1,2})\.(\d{1,2}) to (\d{1,2})\.(\d{1,2})\.(\d{1,2})'
+          minor_regex='^build\(deps(-dev)*\): bump .+ from (\d{1,2})\.(\d{1,2})\.(\d{1,2}) to (\d{1,2})\.(\d{1,2})\.(\d{1,2})'
           if [[ "$PULL_TITLE" =~  $minor_regex ]]; then
-              if [[ "${BASH_REMATCH[1]}" == "${BASH_REMATCH[4]}" && "${BASH_REMATCH[2]}" == "${BASH_REMATCH[5]}" ]]; then
+              if [[ "${BASH_REMATCH[2]}" == "${BASH_REMATCH[5]}" && "${BASH_REMATCH[3]}" == "${BASH_REMATCH[6]}" ]]; then
                   echo "patch/minor version upgrade. approving"
                   echo "::set-output name=approved::true";
                   exit 0
