--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -16,9 +16,7 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Enable auto-merge for Dependabot PRs
-        if: ${{contains(steps.metadata.outputs.dependency-names, 'demisto/*')
-          && (steps.metadata.outputs.update-type == 'version-update:semver:patch'
-           || steps.metadata.outputs.update-type == 'version-update:semver:minor)}}
+        if: ${{contains(steps.metadata.outputs.dependency-names, 'demisto/*') && (steps.metadata.outputs.update-type == 'version-update:semver:patch' || steps.metadata.outputs.update-type == 'version-update:semver:minor')}}
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
