--- a/docker/dempcap/Dockerfile.ironbank
+++ b/docker/dempcap/Dockerfile.ironbank
@@ -25,7 +25,7 @@ ENV DOCKER_IMAGE_IRONBANK='opensource/palo-alto-networks/demisto/dempcap:1.0.0.2
 # Copy the pcapminey directory contents into the container at /app
 COPY pcapminey /app/pcapminey
 
-RUN df --local -P | awk '{if (NR!=1) print $6}' | xargs -I '{}' find '{}' -xdev -type d ( -perm -0002 -a ! -perm -1000 ) 2>/dev/null | xargs chmod a+t
+RUN df --local -P | awk '{if (NR!=1) print $6}' | xargs -I '{}' find '{}' -xdev -type d \( -perm -0002 -a ! -perm -1000 \) 2>/dev/null | xargs -r chmod a+t
 
 HEALTHCHECK NONE
 
