--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -693,3 +693,7 @@ updates:
     directory: /docker/confluent-kafka
     schedule:
       interval: daily
+  - package-ecosystem: pip
+    directory: /docker/syslog
+    schedule:
+     interval: daily
