--- a/docker/sane-pdf-reports/Dockerfile
+++ b/docker/sane-pdf-reports/Dockerfile
@@ -1,4 +1,4 @@
-# Last modified: Thursday, 11 Nov 2021
+# Last modified: Sun, 28 Nov 2021 18:42:39 +0200
 FROM demisto/python3-deb:3.9.6.22912
 
 WORKDIR "/app"
