--- a/docker/imap/Dockerfile
+++ b/docker/imap/Dockerfile
@@ -4,5 +4,5 @@ FROM demisto/python3:3.9.6.24019
 COPY requirements.txt .
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
-  && pip install --no-cache-dir -r requirements.txt \
+  && git config --global http.sslVerify false && pip install --trusted-host github.com --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
