--- a/docker/imap/Pipfile
+++ b/docker/imap/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-mail-parser = {git = "https://github.com/JasBeilin/mail-parser.git", editable = true, ref = "c276bcf16a1094dec6be3cb5612486e6089f7677"}
+mail-parser = {ref = "c276bcf16a1094dec6be3cb5612486e6089f7677", git = "https://github.com/JasBeilin/mail-parser.git"}
 imap-tools = "*"
 imapclient = "*"
 
