--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -21,5 +21,6 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
+          echo "Aprovving and merging"
           gh pr review --approve "$PR_URL"
           gh pr merge --auto --merge "$PR_URL"
