--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -14,7 +14,7 @@ jobs:
         id: metadata
         uses: dependabot/fetch-metadata@v1.1.1
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"}
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Approve and auto-merge for Dependabot PRs
         if: ${{contains(steps.metadata.outputs.dependency-names, 'demisto/*') || steps.metadata.outputs.update-type == 'version-update:semver:patch' || steps.metadata.outputs.update-type == 'version-update:semver:minor'}}
         env:
