--- a/docker/vmware/Pipfile
+++ b/docker/vmware/Pipfile
@@ -1,13 +1,14 @@
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-name = "pypi"
+    [[source]]
+    url = "https://pypi.org/simple"
+    verify_ssl = true
+    name = "pypi"
 
-[packages]
-pyVim = "*"
-pyVmomi = "*"
+    [packages]
+    pyVim = "*"
+    pyVmomi = "*"
+    vsphere-automation-sdk = {file = "https://github.com/vmware/vsphere-automation-sdk-python/archive/refs/tags/v7.0.3.0.tar.gz"}
 
-[dev-packages]
+    [dev-packages]
 
-[requires]
-python_version = "2.7"
+    [requires]
+    python_version = "2.7"
