--- a/docker/vmware/Dockerfile
+++ b/docker/vmware/Dockerfile
@@ -3,6 +3,6 @@ FROM demisto/python:2.7.18.24398
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python2-dev build-base wget git libxslt-dev libxml2-dev \
+RUN apk --update add --no-cache --virtual .build-dependencies python2-dev build-base wget git libxslt-dev libxml2-dev libffi-dev\
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
