--- a/docker/crypto/Dockerfile.ironbank
+++ b/docker/crypto/Dockerfile.ironbank
@@ -11,8 +11,10 @@ COPY *.* ./pip-pkgs/
 
 USER root
 
-RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git rust cargo libffi-dev openssl-dev && \
-        pip install --no-cache-dir --no-index --find-links ./pip-pkgs/ -r requirements.txt &&  \
+RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git \
+        rust cargo \
+        libffi-dev openssl-dev \
+        && pip install --no-cache-dir --no-index --find-links ./pip-pkgs/ -r requirements.txt &&  \
         dnf remove -y python3-devel gcc gcc-c++ make wget git && \
         dnf clean all && \
         rm -rf /var/cache/dnf && \
