--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -16,11 +16,22 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Approve and auto-merge for Dependabot PRs
-        if: ${{contains(steps.metadata.outputs.dependency-names, 'demisto/*') || steps.metadata.outputs.update-type == 'version-update:semver-patch' || steps.metadata.outputs.update-type == 'version-update:semver-minor'}}
+        if: ${{contains(steps.metadata.outputs.dependency-names, 'demisto/*') || steps.metadata.outputs.update-type == 'version-update:semver-patch' || steps.metadata.outputs.update-type == 'version-update:semver-minor' || steps.metadata.outputs.update-type == null}}
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          PULL_TITLE: ${{ github.event.pull_request.title }}
         run: |
-          echo "Aprovving and merging"
+          if [[ -z steps.metadata.outputs.update-type ]]; then
+            minor_regex="^build\(deps(-dev)*\): bump .+ from ([[:digit:]]+)\.([[:digit:]]+)\.([[:digit:]]+) to ([[:digit:]]+)\.([[:digit:]]+)\.([[:digit:]]+)"
+            if [[ "$PULL_TITLE" =~  $minor_regex ]]; then
+              if [[ "${BASH_REMATCH[2]}" != "${BASH_REMATCH[5]}" ]]; then
+                echo "Major version update. Doesn't approving and merging"
+                exit 0
+              fi
+            fi
+          fi
+
+          echo "Approving and merging"
           gh pr review --approve "$PR_URL"
           gh pr merge --auto --squash "$PR_URL"
