--- a/docker/accessdata/Dockerfile
+++ b/docker/accessdata/Dockerfile
@@ -1,3 +1,3 @@
 FROM demisto/python3:3.9.8.24399
 
-RUN pip install https://github.com/AccessDataOps/FTK-API-SDK/archive/refs/tags/v0.7.0.zip
+RUN pip install git+https://github.com/AccessDataOps/FTK-API-SDK.git
