--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -697,3 +697,7 @@ updates:
     directory: /docker/syslog
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/sane-reports
+    schedule:
+     interval: daily
