--- a/docker/accessdata/Dockerfile
+++ b/docker/accessdata/Dockerfile
@@ -1,3 +1,5 @@
 FROM demisto/python3:3.9.8.24399
 
-RUN pip install https://github.com/AccessDataOps/FTK-API-SDK/archive/refs/tags/v0.7.1.zip
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+  && pip install --no-cache-dir -r requirements.txt \
+  && apk del .build-dependencies
