--- a/docker/crypto/Dockerfile.ironbank
+++ b/docker/crypto/Dockerfile.ironbank
@@ -15,7 +15,7 @@ RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git \
         rust cargo \
         libffi-devel openssl-devel \
         && pip install --no-cache-dir --no-index --find-links ./pip-pkgs/ -r requirements.txt &&  \
-        dnf remove -y python3-devel gcc gcc-c++ make wget git && \
+        dnf remove -y python3-devel rust cargo libffi-devel openssl-devel gcc gcc-c++ make wget git && \
         dnf clean all && \
         rm -rf /var/cache/dnf && \
         rm -rf ./pip-pkgs
