--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -701,3 +701,7 @@ updates:
     directory: /docker/accessdata
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python-phash
+    schedule:
+     interval: daily
