--- a/docker/python-phash/Dockerfile
+++ b/docker/python-phash/Dockerfile
@@ -1,8 +1,13 @@
 
-FROM demisto/python3:3.9.8.24399
+FROM demisto/python3-deb:3.9.8.24396
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
-  && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  gcc \
+  python3-dev \
+&& pip install --no-cache-dir -r requirements.txt \
+&& apt-get purge -y --auto-remove \
+  gcc \
+  python3-dev \
+&& rm -rf /var/lib/apt/lists/*
