Updated pipfile to use release object from Git repository.

--- a/docker/accessdata/Pipfile
+++ b/docker/accessdata/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-FTK-API-SDK = {git = "https://github.com/AccessDataOps/FTK-API-SDK.git", editable = true, ref = "dc8b1cef47662bb14358c346be89876968800787"}
+accessdata-sdk = {file = "https://github.com/AccessDataOps/FTK-API-SDK/archive/refs/tags/v0.7.3.zip"}
 
 [requires]
 python_version = "3.9"
