--- a/docker/accessdata/Pipfile
+++ b/docker/accessdata/Pipfile
@@ -3,7 +3,13 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
+[packages]
+certifi = "2021.10.8"
+charset-normalizer = "2.0.9"
+idna = "3.3"
+python-version = "0.0.2"
+requests = "2.26.0"
+urllib3 = "1.26.7"
 
 [requires]
 python_version = "3.9"
