--- a/docker/py3-tools/Pipfile
+++ b/docker/py3-tools/Pipfile
@@ -4,81 +4,41 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-#requests = "*"
-#cloudshare = "*"
-#intezer-sdk = "*"
-#emoji = "*"
-#exifread = "*"
-#"stomp.py" = "*"
-#geopy = "*"
-#xmltodict = "*"
-#beautifulsoup4 = "*"
-#dnspython = "*"
-#algorithmia = "*"
-#asana = "*"
-#feedparser = "*"
-#mail-parser = "*"
-#imap-tools = "*"
-#imapclient = "*"
-#pyjwt = "*"
-#pyminizip = "*"
-#orionsdk = "*"
-#sixgill-clients = "*"
-#paho-mqtt = "*"
-#arrow = "*"
-#pytz = "*"
-#python-dateutil = "*"
-#vertica-python = "*"
-#sendgrid = "*"
-#circleci = "*"
-#cloakensdk = "*"
-#rsa-archer = "*"
-#xlsxwriter = "*"
-#tweepy = "*"
-#laceworksdk = "*"
-#tld = "*"
-#validate-email = "*"
-#markdownify = "*"
-#langdetect = "*"
-# gql = "==3.0.0rc0"
-# minio = "*"
-# marketorestpython = "*"
-# ldap3 = "*"
-# click = "*"
-# colorama = "*"
-# pyotrs = "*"
-# importlib-metadata = "*"
-# dxlclient = "*"
-# dxlmarclient = "*"
-# dxltieclient = "*"
-# fastapi = "*"
-# uvicorn = "*"
-# pymongo = "*"
-# cyjax-cti = "*"
-# pyzabbix = "*"
-# jmespath = "*"
-# tldextract = "*"
-# stix2 = "*"
-# taxii2-client = "*"
-# pycef = "*"
-# xlrd = "==1.2.0"
-# elasticsearch = "*"
-# opensearch-py = "*"
-# elasticsearch-dsl = "*"
-# opensearch_dsl = "*"
-# aiohttp = "*"
-# tableauserverclient = "*"
-# pypdf2 = "*"
-# smartsheet-python-sdk = "*"
-# rsa = "*"
-# pycryptodome = "*"
-# twilio = "*"
-# argus-api = ">=2.0.0,<3.0.0"
-# greynoise = "*"
-# polyswarm = "*"
-# slack-sdk = "*"
-# carbon-black-cloud-sdk = "*"
-# cbapi = "*"
+cloudshare = "*"
+intezer-sdk = "*"
+emoji = "*"
+exifread = "*"
+"stomp.py" = "*"
+geopy = "*"
+dnspython = "*"
+algorithmia = "*"
+asana = "*"
+feedparser = "*"
+beautifulsoup4 = "*"
+mail-parser = "*"
+imap-tools = "*"
+imapclient = "*"
+pyjarm = "*"
+pyminizip = "*"
+paho-mqtt = "*"
+arrow = "*"
+pytz = "*"
+python-dateutil = "*"
+vertica-python = "*"
+sendgrid = "*"
+circleci = "*"
+cloakensdk = "*"
+rsa-archer = "*"
+tweepy = "*"
+tld = "*"
+validate-email = "*"
+requests = "*"
+markdownify = "*"
+langdetect = "*"
+gql = "*"
+minio = "*"
+ldap3 = "*"
+pymongo = "*"
 
 [dev-packages]
 
