--- a/docker/py3-tools/Pipfile
+++ b/docker/py3-tools/Pipfile
@@ -39,6 +39,18 @@ gql = "*"
 minio = "*"
 ldap3 = "*"
 pymongo = "*"
+cyjax-cti = "*"
+pyzabbix = "*"
+jmespath = "*"
+tldextract = "*"
+stix2 = "*"
+taxii2-client = "*"
+xlrd = "==1.2.0"
+elasticsearch = "*"
+opensearch-py = "*"
+elasticsearch-dsl = "*"
+opensearch_dsl = "*"
+aiohttp = "*"
 
 [dev-packages]
 
