new model_docker.pkl

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -705,3 +705,7 @@ updates:
     directory: /docker/python-phash
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/mlurlphishing
+    schedule:
+      interval: daily
