Reset back to use Pipfile over dockerfile for package install.

--- a/docker/accessdata/Pipfile
+++ b/docker/accessdata/Pipfile
@@ -4,12 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-certifi = "2021.10.8"
-charset-normalizer = "2.0.9"
-idna = "3.3"
-python-version = "0.0.2"
-requests = "2.26.0"
-urllib3 = "1.26.7"
+accessdata-sdk = {git = "https://github.com/AccessDataOps/FTK-API-SDK", editable = true, ref = "50603e2a13b0f6b711626cdacadc87e9d5252568"}
 
 [requires]
 python_version = "3.9"
