--- a/docker/accessdata/Pipfile
+++ b/docker/accessdata/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-accessdata-sdk = {git = "https://github.com/AccessDataOps/FTK-API-SDK", editable = true, ref = "50603e2a13b0f6b711626cdacadc87e9d5252568"}
+accessdata-sdk = {git = "https://github.com/AccessDataOps/FTK-API-SDK.git", editable = true, ref = "v0.7.3"}
 
 [requires]
 python_version = "3.9"
