--- a/docker/py-ews/Pipfile
+++ b/docker/py-ews/Pipfile
@@ -13,7 +13,7 @@ cryptography = "*"
 defusedxml = "*"
 dnspython = "*"
 enum34 = "*"
-exchangelib = "==1.12.0"
+exchangelib = "*"
 future = "*"
 idna = "*"
 ipaddress = "*"
