--- a/docker/py3-tools/Dockerfile
+++ b/docker/py3-tools/Dockerfile
@@ -9,34 +9,12 @@ RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-
   && apk del .build-dependencies
 
 
-# Base: 67mb
+# This is an aggregation docker image, which includes the following images:
+# Base size: 67mb
+# Images:
 # cloudshare, intezer, emoji, exifread, stomp.py, geopy, dns-python, 72mb
 # algorithmia, asana, feed-parser-html, imap, pyjarm, python_zipfile 81mb
 # paho-mqtt, python3-arrow, vertica, sendgrid, circleci, archer  85mb
 # tweepy, tld, feed-parser, langdetect, gql, minio, ldap, pymongo 100mb
 # cyjax, zabbix, jmespath, xlrd-py3, elasticsearch, aiohttp, stix2 120mb
-
-
-# Bad:
-# containes dockerfile changes: etl2pcap, pycef,
-# staic version and conflict: gql vs graphql (removed)
-# has verify: marketo, pyotrs, dxl
-#------
-
-# Contains:
-# cloudshare, etl2pcap, intezer, emoji, exifread, stomp.py, geopy
-# dns-python, algorithmia, asana, feed-parser-html, imap, pyjarm,
-# python_zipfile, paho-mqtt, python3-arrow, vertica, sendgrid, circleci,
-# cloakensdk, rsa-archer, tweepy, tld, feed-parser, langdetect, graphql,
-# minio, marketo, ldap, pyotrs, dxl, pymongo, cyjax, zabbix, jmespath,
-# taxii2, pycef, xlrd-py3, elasticsearch, aiohttp, stix2,
-# , smartsheet, btfl-soup, argus-toolbelt, greynoise,
-# unzip, polyswarm, slackv3,  carbon-black-cloud,
-
-
-# Bad:
-# conflicts: gql with graphql, pymisp with pymisp2, ***
-# pip lock conflicts: pymisp2, opencti-v4, opencti,
-# hard to get working: zeep, threatconnect-py3-sdk, crypto, accessdata, py42, confluent-kafka
-# too big: nmap, dnstwist, threatconnect-tcex, slack, bs4-py3(1.1mb)
 
