--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -709,3 +709,7 @@ updates:
     directory: /docker/mlurlphishing
     schedule:
       interval: daily
+  - package-ecosystem: pip
+    directory: /docker/py3-tools
+    schedule:
+      interval: daily
