--- a/docker/accessdata/Pipfile
+++ b/docker/accessdata/Pipfile
@@ -3,10 +3,8 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-
 [packages]
-FTK-API-SDK = {git = "https://github.com/AccessDataOps/FTK-API-SDK.git", editable = true, ref = "dc8b1cef47662bb14358c346be89876968800787"}
+accessdata-sdk = {git = "https://github.com/AccessDataOps/FTK-API-SDK.git", editable = true, ref = "v0.7.3"}
 
 [requires]
 python_version = "3.9"
