Remove unused content pip imports, replace gql with used graphql

--- a/docker/py3-tools/Pipfile
+++ b/docker/py3-tools/Pipfile
@@ -11,7 +11,6 @@ exifread = "*"
 "stomp.py" = "*"
 geopy = "*"
 dnspython = "*"
-algorithmia = "*"
 asana = "*"
 feedparser = "*"
 beautifulsoup4 = "*"
@@ -21,12 +20,10 @@ imapclient = "*"
 pyjarm = "*"
 pyminizip = "*"
 paho-mqtt = "*"
-arrow = "*"
 pytz = "*"
 python-dateutil = "*"
 vertica-python = "*"
 sendgrid = "*"
-circleci = "*"
 rsa-archer = "*"
 tweepy = "*"
 tld = "*"
@@ -34,7 +31,7 @@ validate-email = "*"
 requests = "*"
 markdownify = "*"
 langdetect = "*"
-gql = "*"
+gql = "==3.0.0rc0"
 minio = "*"
 ldap3 = "*"
 pymongo = "*"
