--- a/docker/py3-tools/Dockerfile
+++ b/docker/py3-tools/Dockerfile
@@ -13,8 +13,8 @@ RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-
 # Base size: 67mb
 # Images:
 # cloudshare, intezer, emoji, exifread, stomp.py, geopy, dns-python, 72mb
-# algorithmia, asana, feed-parser-html, imap, pyjarm, python_zipfile 81mb
-# paho-mqtt, python3-arrow, vertica, sendgrid, circleci, archer  85mb
-# tweepy, tld, feed-parser, langdetect, gql, minio, ldap, pymongo 100mb
+# asana, feed-parser-html, imap, pyjarm, python_zipfile 81mb
+# paho-mqtt, vertica, sendgrid, archer  85mb
+# tweepy, tld, feed-parser, langdetect, graphql, minio, ldap, pymongo 100mb
 # cyjax, zabbix, jmespath, xlrd-py3, elasticsearch, aiohttp, stix2 120mb
 
