--- a/docker/py3-tools/Dockerfile
+++ b/docker/py3-tools/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt .
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
-
+  && apk --no-cache add python ca-certificates
 
 # This is an aggregation docker image, which includes the following images:
 # Base size: 67mb
