update rubrik polaris sdk

--- a/docker/rubrik-polaris-sdk-py3/Dockerfile
+++ b/docker/rubrik-polaris-sdk-py3/Dockerfile
@@ -6,3 +6,9 @@ COPY requirements.txt .
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
+
+WORKDIR /src/rubrik-polaris-sdk-for-python
+
+RUN python setup.py install
+
+WORKDIR /
