--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
           name: Validate Approved Licenses File
           command: python -m jsonschema -i docker/approved_licenses.json docker/approved_licenses.schema.json
       - run:
-          name: Validate Dependabot Config
-          command: ./docker/verify_dependabot.sh
+          name: Validate Images and Dependabot
+          command: python -m test_pipfile_all.py
       - setup_remote_docker:
           version: 20.10.6
       - add_ssh_keys:
