--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
             pip install pipenv==2021.5.29
             pipenv install --dev
       - run:
+          name: print version name
+          command: echo python --version
+      - run:
           name: Validate Images and Dependabot
           command: python test_pipfile_all.py
       - run:
