--- a/docker/dockerbuild/Pipfile
+++ b/docker/dockerbuild/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pipenv = "2021.5.29"
+"ruame.lyaml" = "*"
 
 [packages]
 requests = "*"
