--- a/docker/dockerbuild/Pipfile
+++ b/docker/dockerbuild/Pipfile
@@ -4,12 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pipenv = "2021.5.29"
-"ruame.lyaml" = "*"
 
 [packages]
 requests = "*"
 jsonschema = "*"
+pipenv = "*"
+"ruamel.yaml" = "*"
 
 [requires]
 python_version = "3.10"
