Update dependabot yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -712,4 +712,7 @@ updates:
   - package-ecosystem: pip
     directory: /docker/py3-tools
     schedule:
-      interval: daily
+      interval: daily  - package-ecosystem: pip
+    directory: /docker/pan-os-python
+    schedule:
+     interval: daily
