--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -712,7 +712,8 @@ updates:
   - package-ecosystem: pip
     directory: /docker/py3-tools
     schedule:
-      interval: daily  - package-ecosystem: pip
+      interval: daily  
+  - package-ecosystem: pip
     directory: /docker/pan-os-python
     schedule:
      interval: daily
