--- a/docker/pymisp2/Dockerfile
+++ b/docker/pymisp2/Dockerfile
@@ -3,10 +3,7 @@ FROM demisto/python3:3.9.6.22912
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+RUN apk add gcc && && apk add linux-headers && apk add libc-dev \
+  && apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
-RUN apk add gcc
-RUN apk add linux-headers
-RUN apk add libc-dev
-RUN apk add libffi-dev
